--- a/.example.env
+++ b/.example.env
@@ -1,18 +1,18 @@
 # Credentials for the database. Generate your own secure password!
 DB_NAME=qtweetData
-DB_USER=qtweetAdmin
-DB_PASSWORD=hunter2
+DB_USER=Jiisasu
+DB_PASSWORD=Siriusb22!
 
 # Tokens section.
 ## The discord token can be found on your bot's page
 ## on the discord developer portal.
 ## The Twitter tokens are all available once you register
 ## your app on the Twitter developer portal.
-DISCORD_TOKEN=
-TWITTER_API_KEY=
-TWITTER_API_SECRET_KEY=
-TWITTER_ACCESS_TOKEN=
-TWITTER_ACCESS_TOKEN_SECRET=
+DISCORD_TOKEN=NzEzNDkxNTA5MjYwODQ1MDY2.XshhUw.79II2Vv9SMMWqPlRFS0r4fhBXec
+TWITTER_API_KEY=dqtcBPNaQUCNlGXzPn2tS8aVR
+TWITTER_API_SECRET_KEY=cRdrLwNEBUOtKVtpwBnFcb84GnDNoKITDTszetNLISJ6N7BaKd
+TWITTER_ACCESS_TOKEN=1263083284902404098-Gxx4HCNUnplEq0548VT3YqWeLiXW4l
+TWITTER_ACCESS_TOKEN_SECRET=uMtRxFe56x4ZkDL2TCtAKkqMqcdQ2NbBedlKTxlbMLx97
 DBL_TOKEN=
 
 # Time and language, you can leave it like this
@@ -24,7 +24,7 @@ VERBOSE=0
 
 # App stuff
 PREFIX=!!
-BOT_NAME=QTweet
+BOT_NAME=El Chunior
 
 SHARD_SPAWN_DELAY=20000
 SHARD_SPAWN_TIMEOUT=120000
